[tool.poetry]
name = "Escher"
version = "0.0.1"
description = "A Web Application for Building, Sharing, and Embedding Data-Rich Visualizations of Metabolic Pathways; edited from github.com/zakandrewking/escher to provide support for Python 3.7+"
authors = ["zakandrewking <zaking17@gmail.com>"]
maintainers = ["Josh Loecker <joshloecker@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3"
cobra = ">=0.5.0"
jsonschema = "^3.0.1"
ipywidgets = "^7.4"
pandas = ">=0.18"

# Optional docs dependencies
sphinx = { version = ">=2.1.1,<3", optional = true }
sphinx-rtd-theme = { version = ">=0.4.3,<0.5", optional = true }
nbsphinx = { version = ">=0.4.2,<0.5", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
mypy = "^1.7.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
